--- a/vue-app/package.json
+++ b/vue-app/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "header": "file:../header",
     "vue": "^2.6.11"
   },
   "devDependencies": {
